@@ -1,0 +1,7 @@
+Title: New Check for Areca Raid Controllers
+Level: 1
+Component: checks
+Version: 1.2.3i7
+Date: 1384955153
+Class: feature
+
