@@ -1,0 +1,19 @@
+title: Areca Raid Controllers
+agents:  linux
+catalog: os/storage
+license: GPL
+distribution: check_mk
+description:
+ This check monitors the health and current Status of a areca raid controller.
+ The check returns a {CRIT} for Degarde and Incompleted, {WARN} in case of Rebuilding.
+ Also {CRIT} is returned is an case that the number of disks in the array Changes.
+ The cli64 has be installed for the agent plugin to work. It can be downloaded here: 
+ ftp://ftp.areca.com.tw/RaidCards/AP_Drivers/Linux/CLI/
+
+
+item:
+ The numeric number of the array, reported by areca cli tool
+
+inventory:
+ One check is created for array
+
